posthoc and data fixes

--- a/notebooks/posthoc.ipynb
+++ b/notebooks/posthoc.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -27,12 +27,15 @@
     "from pathlib import Path\n",
     "import getpass\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import time\n",
+    "import math\n",
     "import torch\n",
     "from torch import nn\n",
     "from tqdm import tqdm\n",
     "import random\n",
     "import sys\n",
+    "from torch.utils.data import random_split\n",
     "\n",
     "# allow imports when running script from within project dir\n",
     "[sys.path.append(i) for i in ['.', '..']]\n",
@@ -52,18 +55,30 @@
     "username = getpass.getuser()\n",
     "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori_data/validation/')\n",
+    "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
+    "ORI_IMAGES_PATH = Path(ORI_PATH,'images')\n",
+    "\n",
     "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
     "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
     "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
     "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data/validation/')\n",
-    "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
-    "ORI_IMAGES_PATH = Path(ORI_PATH,'images')"
+    "PGD_PATH = Path(DATA_PATH, 'adversarial_data/pgd_03/validation')\n",
+    "PGD_LABEL_PATH = ORI_LABEL_PATH\n",
+    "PGD_IMAGES_PATH = Path(PGD_PATH, 'images')\n",
+    "\n",
+    "POSTHOC_PATH = Path(DATA_PATH, 'posthoc/')\n",
+    "\n",
+    "DN_POSTHOC_PATH = Path(POSTHOC_PATH, 'damagenet')\n",
+    "DN_POSTHOC_LABEL_PATH = Path(DN_POSTHOC_PATH, 'labels.csv')\n",
+    "\n",
+    "PGD_POSTHOC_PATH = Path(POSTHOC_PATH, 'pgd')\n",
+    "PGD_POSTHOC_LABEL_PATH = Path(PGD_POSTHOC_PATH, 'labels.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
@@ -82,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -103,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -132,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,15 +164,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pgd_loader = create_loader(PGD_IMAGES_PATH, PGD_LABEL_PATH, INDEX_SUBSET, CLASS_SUBSET, BATCH_SIZE)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adversarial sample generation"
+    "## Adversarial Sample Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,39 +203,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AdvTupleIterator:\n",
-    "    def __init__(self, ori_loader, dn_loader, model, linear_classifier):\n",
+    "    def __init__(self, ori_loader, dn_loader, model, linear_classifier, max=50):\n",
     "        self.samples = adv_dataset(ori_loader, dn_loader, model, linear_classifier)\n",
-    "\n",
+    "        self.max = max\n",
+    "        self.num = 0\n",
+    "    \n",
     "    def __iter__(self):\n",
+    "        self.num = 0\n",
     "        return self\n",
     "        \n",
     "    def __next__(self):\n",
-    "        num, org, adv = next(self.samples)\n",
-    "        org_out = generate_model_output(org)\n",
-    "        adv_out = generate_model_output(adv)\n",
-    "        return num, org_out, adv_out"
+    "        if(self.max > 0 and self.num >= self.max):\n",
+    "            raise StopIteration\n",
+    "        self.num += 1\n",
+    "        # payload can be original or adversarial.\n",
+    "        sample, payload, label = next(self.samples)\n",
+    "        payload_out = generate_model_output(payload)\n",
+    "        return sample, payload_out, label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "payload 10/10 (label 1)"
+     ]
+    }
+   ],
    "source": [
     "# testing iterator\n",
     "\n",
     "total=10\n",
-    "samples = AdvTupleIterator(ori_loader, dn_loader, model, linear_classifier)\n",
+    "samples = AdvTupleIterator(ori_loader, dn_loader, model, linear_classifier, max=50)\n",
+    "#samples = AdvTupleIterator(ori_loader, pgd_loader, model, linear_classifier, max=50)\n",
     "\n",
     "for i in range(total):\n",
-    "  num, org, adv = next(samples)\n",
-    "  sys.stdout.write(f\"\\rtuple {i+1}/{total} ({num})\")\n",
+    "  num, payload, label = next(samples)\n",
+    "  sys.stdout.write(f\"\\rpayload {i+1}/{total} (label {label})\")\n",
     "  sys.stdout.flush()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving to disk (once)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 2000/2000 ILSVRC2012_val_00001910 (label 1)"
+     ]
+    }
+   ],
+   "source": [
+    "# save to disk!\n",
+    "iterator = AdvTupleIterator(ori_loader, dn_loader, model, linear_classifier, max=0)\n",
+    "names = []\n",
+    "paths = []\n",
+    "labels = []\n",
+    "limit = 2000\n",
+    "for i, (name, payload, label) in enumerate(iterator):\n",
+    "    if i >= limit: break\n",
+    "    sys.stdout.write(f\"\\r {i+1}/{limit} {name} (label {label})\")\n",
+    "    sys.stdout.flush()\n",
+    "    # original: 0, adversarial: 1\n",
+    "    if label == 0:\n",
+    "        path = f\"org/{name}\"\n",
+    "    else:\n",
+    "        path = f\"adv/{name}\"\n",
+    "    paths.append(path)\n",
+    "    names.append(name)\n",
+    "    labels.append(label)\n",
+    "    path = Path(DN_POSTHOC_PATH, path)\n",
+    "    torch.save(payload, path)\n",
+    "    \n",
+    "df = pd.DataFrame(data={\"path\": paths, \"name\": names, \"label\": labels})\n",
+    "df.to_csv(DN_POSTHOC_LABEL_PATH, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load from disk (PyTorch dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AdvDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, img_folder, index_df):\n",
+    "        super().__init__()\n",
+    "        self.img_folder = img_folder\n",
+    "        self.index_df = index_df\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.index_df)\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        filename = self.index_df['path'].iloc[index]\n",
+    "        label = self.index_df['label'].iloc[index]\n",
+    "        payload = torch.load(Path(self.img_folder, filename))\n",
+    "        return filename, payload, label"
    ]
   },
   {
@@ -216,31 +337,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader, TensorDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Simple Binary Classifier Network\n",
     "class SimpleBC(nn.Module):\n",
-    "    def __init__(self,input_shape):\n",
+    "    def __init__(self, input_shape):\n",
     "        super(SimpleBC,self).__init__()\n",
     "        self.fc1 = nn.Linear(input_shape,64)\n",
     "        self.fc2 = nn.Linear(64,32)\n",
     "        self.fc3 = nn.Linear(32,1)\n",
     "\n",
-    "    def forward(self,x):\n",
+    "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
     "        x = torch.relu(self.fc2(x))\n",
     "        x = torch.sigmoid(self.fc3(x))\n",
@@ -249,25 +371,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_df = pd.read_csv(DN_POSTHOC_LABEL_PATH)\n",
+    "train_len = math.floor(len(index_df) * 0.7)\n",
+    "test_len = len(index_df) - train_len\n",
+    "\n",
+    "train_dataset, test_dataset = random_split(AdvDataset(DN_POSTHOC_PATH, index_df), [train_len, test_len], generator=torch.Generator().manual_seed(42))\n",
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=8, shuffle=False)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=8, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(index_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?it/s]\n"
+      "Ep: 9\t Tr. Loss: 0.0001\t Tr. Acc: 1.0000\t T. Loss: 0.9811\t T. Acc: 0.9950: 100%|██████████| 10/10 [00:18<00:00,  1.82s/it]"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'train_loader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-f1db17652046>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mtest_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m         \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_loader' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Training\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -297,6 +457,9 @@
     "losses = []\n",
     "accur = []\n",
     "\n",
+    "train_files = []\n",
+    "test_files = []\n",
+    "\n",
     "# Train network\n",
     "pbar = tqdm(range(EPOCHS))\n",
     "for epoch in pbar:  # loop over the dataset multiple times\n",
@@ -309,7 +472,8 @@
     "    test_running_loss = 0.0\n",
     "    test_acc = 0.0\n",
     "\n",
-    "    for i, (inputs, labels) in enumerate(train_loader, start=0):\n",
+    "    for i, (filename, inputs, labels) in enumerate(train_loader, start=0):        \n",
+    "        train_files.append(filename)\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device).float()\n",
     "\n",
@@ -332,11 +496,12 @@
     "        acc_labels = labels\n",
     "        acc_labels = acc_labels.detach().cpu().numpy()\n",
     "        inter = np.equal(predicted, acc_labels)\n",
-    "        train_acc += inter.mean()\n",
-    "        train_acc_mean = train_acc / (i+1)\n",
+    "        train_acc += inter.sum()\n",
+    "        #train_acc_mean = train_acc / (i+1)\n",
     "    \n",
     "    with torch.set_grad_enabled(False):\n",
-    "        for inputs, labels in test_loader:\n",
+    "        for filename, inputs, labels in test_loader:\n",
+    "            test_files.append(filename)\n",
     "            try:\n",
     "                # get the inputs; data is a list of [inputs, labels] and write to device\n",
     "                inputs = inputs.to(device)\n",
@@ -353,7 +518,7 @@
     "                # accuracy test\n",
     "                outputs = outputs.detach().cpu().numpy().round()\n",
     "                comparison = np.equal(labels.detach().cpu().numpy(), outputs)\n",
-    "                test_acc = comparison.mean()\n",
+    "                test_acc += comparison.sum()\n",
     "\n",
     "            except Exception as e:\n",
     "                print(\"Error: {}\".format(e))\n",
@@ -363,12 +528,54 @@
     "    accur.append(train_acc_mean)\n",
     "    pbar.set_description(\"Ep: {}\\t Tr. Loss: {:.4f}\\t Tr. Acc: {:.4f}\\t T. Loss: {:.4f}\\t T. Acc: {:.4f}\".format(epoch, \n",
     "                                                                            train_running_loss_mean, \n",
-    "                                                                            train_acc_mean, \n",
+    "                                                                            train_acc / len(train_loader.dataset), \n",
     "                                                                            test_running_loss, \n",
-    "                                                                            test_acc))\n",
+    "                                                                            test_acc / len(test_loader.dataset)))\n",
     "\n",
     "print('Finished Training')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_flat = []\n",
+    "for item in train_files:\n",
+    "    train_flat += list(item)\n",
+    "\n",
+    "test_flat = []\n",
+    "for item in test_files:\n",
+    "    test_flat += list(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(train_flat).intersection(set(test_flat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
