--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -17,9 +17,11 @@
     "from pathlib import Path\n",
     "import getpass\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import time\n",
     "import torch\n",
     "from torch import nn\n",
+    "import torchvision\n",
     "from tqdm import tqdm\n",
     "import random\n",
     "import sys\n",
@@ -61,7 +63,7 @@
     "INDEX_SUBSET = get_random_indexes()\n",
     "CLASS_SUBSET = get_random_classes()\n",
     "\n",
-    "BATCH_SIZE = 1\n",
+    "BATCH_SIZE = 16\n",
     "\n",
     "DEVICE = 'cuda'"
    ]
