--- a/notebooks/posthoc.ipynb
+++ b/notebooks/posthoc.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -316,23 +316,23 @@
      "text": [
       "posthoc path: /cluster/scratch/thobauma/dl_data/posthoc/damagenet\n",
       "label path: /cluster/scratch/thobauma/dl_data/posthoc/damagenet/labels.csv\n",
-      " 40/40 ILSVRC2012_val_00000038 (label 1)\n",
+      " 1000/1000 ILSVRC2012_val_00001020 (label 1)\n",
       "posthoc path: /cluster/scratch/thobauma/dl_data/posthoc/pgd\n",
       "label path: /cluster/scratch/thobauma/dl_data/posthoc/pgd/labels.csv\n",
-      " 40/40 ILSVRC2012_val_00000038 (label 1)\n",
+      " 1000/1000 ILSVRC2012_val_00001020 (label 1)\n",
       "posthoc path: /cluster/scratch/thobauma/dl_data/posthoc/cw\n",
       "label path: /cluster/scratch/thobauma/dl_data/posthoc/cw/labels.csv\n",
-      " 40/40 ILSVRC2012_val_00000038 (label 1)\n"
+      " 1000/1000 ILSVRC2012_val_00001020 (label 1)\n"
      ]
     }
    ],
    "source": [
     "# save to disk!\n",
-    "limit = 0\n",
+    "limit = 1000\n",
     "datasets = [\n",
-    "    {\"posthoc_path\": DN_POSTHOC_PATH, \"label_path\": DN_POSTHOC_LABEL_PATH},\n",
+    "    {\"posthoc_path\": DN_POSTHOC_PATH,  \"label_path\": DN_POSTHOC_LABEL_PATH},\n",
     "    {\"posthoc_path\": PGD_POSTHOC_PATH, \"label_path\": PGD_POSTHOC_LABEL_PATH},\n",
-    "    {\"posthoc_path\": CW_POSTHOC_PATH, \"label_path\": CW_POSTHOC_LABEL_PATH},\n",
+    "    {\"posthoc_path\": CW_POSTHOC_PATH,  \"label_path\": CW_POSTHOC_LABEL_PATH},\n",
     "]\n",
     "\n",
     "for dataset in datasets:\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear Binary Classifier\n",
+    "class LinearBC(nn.Module):\n",
+    "    def __init__(self, input_shape):\n",
+    "        super(LinearBC,self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_shape,1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.sigmoid(self.fc1(x))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -460,8 +477,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep: 9\t Tr. Loss: 0.0047\t Tr. Acc: 1.0000\t T. Loss: 0.7795\t T. Acc: 0.8333: 100%|██████████| 10/10 [00:00<00:00, 21.96it/s]\n",
-      "Ep: 3\t Tr. Loss: 0.0031\t Tr. Acc: 1.0000\t T. Loss: 0.7569\t T. Acc: 0.8333:  30%|███       | 3/10 [00:00<00:00, 22.61it/s]"
+      "Ep: 9\t Tr. Loss: 0.0011\t Tr. Acc: 1.0000\t T. Loss: 1.9946\t T. Acc: 0.9733: 100%|██████████| 10/10 [00:13<00:00,  1.36s/it]\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -476,8 +493,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep: 9\t Tr. Loss: 0.0020\t Tr. Acc: 1.0000\t T. Loss: 0.7586\t T. Acc: 0.8333: 100%|██████████| 10/10 [00:00<00:00, 22.73it/s]\n",
-      "Ep: 3\t Tr. Loss: 0.0016\t Tr. Acc: 1.0000\t T. Loss: 0.7663\t T. Acc: 0.8333:  30%|███       | 3/10 [00:00<00:00, 21.38it/s]"
+      "Ep: 9\t Tr. Loss: 0.0007\t Tr. Acc: 1.0000\t T. Loss: 1.8514\t T. Acc: 0.9733: 100%|██████████| 10/10 [00:13<00:00,  1.34s/it]\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -492,7 +509,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep: 9\t Tr. Loss: 0.0013\t Tr. Acc: 1.0000\t T. Loss: 0.7695\t T. Acc: 0.8333: 100%|██████████| 10/10 [00:00<00:00, 21.88it/s]"
+      "Ep: 9\t Tr. Loss: 0.0005\t Tr. Acc: 1.0000\t T. Loss: 1.7752\t T. Acc: 0.9767: 100%|██████████| 10/10 [00:13<00:00,  1.35s/it]"
      ]
     },
     {
@@ -517,7 +534,7 @@
     "EPOCHS = 10\n",
     "\n",
     "# Initialise network\n",
-    "net = SimpleBC(1536)\n",
+    "net = LinearBC(1536)\n",
     "\n",
     "# Select device\n",
     "use_cuda = torch.cuda.is_available()\n",
