template: fixed paths, loading of the class_subset; data: transformations;

--- a/notebooks/createDataSubset.ipynb
+++ b/notebooks/createDataSubset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,6 @@
     "import time\n",
     "import torch\n",
     "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
     "import torchvision\n",
     "from tqdm import tqdm\n",
     "import random\n",
@@ -31,10 +30,9 @@
     "[sys.path.append(i) for i in ['.', '..']]\n",
     "\n",
     "# local\n",
-    "# from src.helpers.helpers import get_random_indexes, get_random_classes\n",
-    "from src.model.dino_model import get_dino, ViTWrapper\n",
+    "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
+    "from src.model.dino_model import get_dino\n",
     "from src.model.data import *\n",
-    "from src.model.train import *\n",
     "\n",
     "# seed\n",
     "SEED = 42\n",
@@ -67,21 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If CLASS_SUBSET is specified, INDEX_SUBSET will be ignored. Set CLASS_SUBSET=None if you want to use indexes.\n",
-    "# INDEX_SUBSET = get_random_indexes(number_of_images = 50000, n_samples=1000)\n",
-    "# CLASS_SUBSET = get_random_classes(number_of_classes = 25, min_rand_class = 1, max_rand_class = 1001)\n",
-    "\n",
-    "\n",
-    "CLASS_SUBSET = np.load(CLASS_SUBSET_PATH)\n",
-    "\n",
-    "\n",
-    "NUM_WORKERS= 0\n",
-    "PIN_MEMORY=True\n",
-    "\n",
+    "INDEX_SUBSET = get_random_indexes(number_of_images = 50000, n_samples=1000, seed = 42)\n",
+    "CLASS_SUBSET = get_random_classes(number_of_classes = 25, min_rand_class = 1, max_rand_class = 1001)\n",
+    "INDEX_SUBSET = None\n",
     "BATCH_SIZE = 16\n",
     "\n",
     "DEVICE = 'cuda'"
@@ -89,28 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!python $HOME/deeplearning/setup/collect_env.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import DINO\n",
-    "Official repo: https://github.com/facebookresearch/dino"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model, linear_classifier = get_dino()"
+    "np.save(CLASS_SUBSET_PATH,CLASS_SUBSET)"
    ]
   },
   {
@@ -122,24 +96,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remember to set the correct transformation\n",
-    "\n",
-    "train_dataset = AdvTrainingImageDataset(TRAIN_IMAGES_PATH, TRAIN_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
-    "val_dataset = AdvTrainingImageDataset(VAL_IMAGES_PATH, VAL_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
-    "train_loader = DataLoader(train_dataset, BATCH_SIZE, NUM_WORKERS, PIN_MEMORY, shuffle=False)\n",
-    "val_loader = DataLoader(val_dataset, BATCH_SIZE, NUM_WORKERS, PIN_MEMORY, shuffle=False)"
+    "train_dataset = AdvTrainingImageDataset(TRAIN_IMAGES_PATH, TRAIN_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET)\n",
+    "val_dataset = AdvTrainingImageDataset(VAL_IMAGES_PATH, VAL_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([103, 436, 861, 271, 107,  72, 701,  21, 615, 122, 467, 215, 331,\n",
+       "       459,  88, 373, 100, 872, 664, 131, 662, 309, 770, 344, 492])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset.class_subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31717"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_dataset)"
+   ]
   }
  ],
  "metadata": {
