--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -130,8 +130,8 @@
     "\n",
     "train_dataset = AdvTrainingImageDataset(TRAIN_IMAGES_PATH, TRAIN_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
     "val_dataset = AdvTrainingImageDataset(VAL_IMAGES_PATH, VAL_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
-    "train_loader = DataLoader(train_dataset, BATCH_SIZE, NUM_WORKERS, PIN_MEMORY, shuffle=False)\n",
-    "val_loader = DataLoader(val_dataset, BATCH_SIZE, NUM_WORKERS, PIN_MEMORY, shuffle=False)"
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)"
    ]
   },
   {
