fixed dataloader args

--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -88,15 +88,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!python $HOME/deeplearning/setup/collect_env.py"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,8 +121,8 @@
     "\n",
     "train_dataset = AdvTrainingImageDataset(TRAIN_IMAGES_PATH, TRAIN_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
     "val_dataset = AdvTrainingImageDataset(VAL_IMAGES_PATH, VAL_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
-    "train_loader = DataLoader(train_dataset, BATCH_SIZE, NUM_WORKERS, PIN_MEMORY, shuffle=False)\n",
-    "val_loader = DataLoader(val_dataset, BATCH_SIZE, NUM_WORKERS, PIN_MEMORY, shuffle=False)"
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)\n",
+    "val_loader = DataLoader(val_dataset,  batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)"
    ]
   },
   {
