changed path name

--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -45,7 +45,7 @@
     "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "MAX_PATH = Path('/','cluster', 'scratch', 'mmathys', 'dl_data')\n",
     "\n",
-    "LOG_PATH = Path(MAX_PATH, 'logs')\n",
+    "LOG_BASE_PATH = Path(MAX_PATH, 'logs')\n",
     "\n",
     "# DamageNet\n",
     "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
