updated dataset generation

--- a/notebooks/AdversarialDatasetGeneration.ipynb
+++ b/notebooks/AdversarialDatasetGeneration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,10 @@
     "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
     "CLASS_SUBSET_PATH = Path(ORI_PATH, 'class_subset.npy')\n",
     "\n",
+    "TRAIN_PATH = Path(ORI_PATH, 'train')\n",
+    "TRAIN_IMAGES_PATH = Path(TRAIN_PATH,'images')\n",
+    "TRAIN_LABEL_PATH = Path(TRAIN_PATH, 'correct_labels.txt')\n",
+    "\n",
     "VAL_PATH = Path(ORI_PATH, 'validation')\n",
     "VAL_IMAGES_PATH = Path(VAL_PATH,'images')\n",
     "VAL_LABEL_PATH = Path(VAL_PATH, 'correct_labels.txt')"
@@ -62,13 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "INDEX_SUBSET = None\n",
     "NUM_WORKERS= 0\n",
     "PIN_MEMORY=True\n",
+    "CLASS_SUBSET = np.load(CLASS_SUBSET_PATH)\n",
     "\n",
     "BATCH_SIZE = 80\n",
     "\n",
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +119,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torchvision import transforms as pth_transforms\n",
     "\n",
+    "train_dataset = ImageDataset(TRAIN_IMAGES_PATH, TRAIN_LABEL_PATH, ORIGINAL_TRANSFORM, CLASS_SUBSET, index_subset=None)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)\n",
+    "\n",
     "val_dataset = ImageDataset(VAL_IMAGES_PATH, VAL_LABEL_PATH, ORIGINAL_TRANSFORM, None, index_subset=None)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31717"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_loader.dataset)"
    ]
   },
   {
@@ -133,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +194,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/625 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------\n",
+      "FGSM(model_name=ViTWrapper, device=cuda:0, eps=0.06, attack_mode=default, return_type=float)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▏         | 14/625 [00:27<20:03,  1.97s/it]"
+     ]
+    }
+   ],
    "source": [
     "total = len(val_loader.dataset)\n",
     "\n",
@@ -176,8 +227,8 @@
     "    print(atk)\n",
     "    \n",
     "    STORE_PATH = Path(MAX_PATH, f'adversarial_data/{name}')\n",
-    "    STORE_LABEL_PATH = Path(STORE_PATH, 'validation/labels.txt')\n",
-    "    STORE_IMAGES_PATH = Path(STORE_PATH, 'validation/images/')\n",
+    "    STORE_LABEL_PATH = Path(STORE_PATH, 'train/labels.txt')\n",
+    "    STORE_IMAGES_PATH = Path(STORE_PATH, 'train/images/')\n",
     "    adv_labels = {}\n",
     "    \n",
     "    if not os.path.exists(STORE_IMAGES_PATH):\n",
