--- a/notebooks/AdversarialDatasetGeneration.ipynb
+++ b/notebooks/AdversarialDatasetGeneration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "31717"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/625 [00:00<?, ?it/s]"
+      "  0%|          | 0/397 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -214,12 +214,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 14/625 [00:27<20:03,  1.97s/it]"
+      " 12%|█▏        | 49/397 [01:30<10:28,  1.81s/it]"
      ]
     }
    ],
    "source": [
-    "total = len(val_loader.dataset)\n",
+    "total = len(train_loader.dataset)\n",
     "\n",
     "for atk, name in attacks:\n",
     "    \n",
@@ -238,7 +238,7 @@
     "    clean_correct = 0\n",
     "    start = time.time()\n",
     "    \n",
-    "    for images, labels, img_names in tqdm(val_loader):\n",
+    "    for images, labels, img_names in tqdm(train_loader):\n",
     "        \n",
     "        labels = labels.to(DEVICE)\n",
     "        \n",
