train: functions to train and evaluate a network, dino_model: normalization as default for transformation, data: adversarial_training_transform

--- a/notebooks/old/AdversarialTraining.ipynb
+++ b/notebooks/old/AdversarialTraining.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,10 @@
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
     "from src.model.dino_model import get_dino, ViTWrapper\n",
     "from src.model.data import create_loader\n",
-    "from src.model.eval import validate_network\n",
     "\n",
     "# Custom imports\n",
     "import torchattacks\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "from torchattacks import *\n",
     "import torch.optim as optim\n",
     "\n",
@@ -46,15 +46,16 @@
     "\n",
     "username = getpass.getuser()\n",
     "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
+    "LOG_PATH = Path(DATA_PATH, 'logs')\n",
     "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori_data', 'validation')\n",
     "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
     "ORI_IMAGES_PATH = Path(ORI_PATH,'images')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +95,7 @@
       "Please use the `--pretrained_weights` argument to indicate the path of the checkpoint to evaluate.\n",
       "Since no pretrained weights have been provided, we load the reference pretrained DINO weights.\n",
       "Model vit_small built.\n",
+      "Embed dim 1536\n",
       "We load the reference pretrained linear weights.\n"
      ]
     }
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,13 +217,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "writer = SummaryWriter(LOG_PATH)\n",
+    "np.set_printoptions(precision=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for epoch in range(NUM_EPOCHS):\n",
     "    \n",
-    "    for i, (batch_images, batch_labels, _) in enumerate(ori_loader):\n",
+    "    for i, (batch_images, batch_labels, _) in enumerate(tqdm(ori_loader)):\n",
     "        \n",
     "        X = train_attack(batch_images, batch_labels).to(DEVICE)\n",
     "        Y = batch_labels.to(DEVICE)\n",
@@ -252,7 +265,7 @@
     "            adv_samples = train_attack(imgs, labels).cuda()\n",
     "            \n",
     "            with torch.no_grad():\n",
-    "                predictions = train_model(adv_samples, False)\n",
+    "                predictions = train_model(adv_samples)\n",
     "            correct_adv += torch.sum(torch.eq(predictions.argmax(1), labels))\n",
     "\n",
     "          del imgs\n",
